# AURA

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  plan_2026-07-21_1646_align-agents-rules-with-chronos.md  plan_2026-07-22_1929_launcher-first-repo-law.md  plan_2026-07-22_1940_first-aura-launcher.md  plan_2026-07-22_2017_desktop-icon-launcher.md  plan_2026-07-22_2025_profile-root-desktop-shortcut.md  plan_2026-07-22_2034_clear-stale-shortcut-arguments.md  plan_2026-07-23_0828_print-ready-document-frames.md  plan_2026-07-23_0849_audit-out-bullshit-law.md  plan_2026-07-23_0853_rocksdb-forever-document-store.md
.agents/: AGENTS.md
.cursor/rules/: sentinel-first.mdc
NC LOGOS/neurocognica_logos/: README.md
crates/aura_cli/: Cargo.toml
crates/aura_cli/src/: main.rs
crates/aura_documents/: Cargo.toml
crates/aura_documents/src/: lib.rs
crates/aura_launcher/: Cargo.toml  build.rs
crates/aura_launcher/src/: main.rs  model.rs
crates/aura_runtime/: Cargo.toml
crates/aura_runtime/src/: boot.rs  broker.rs  client.rs  decision_log.rs  error.rs  lib.rs  request.rs  sentinel.rs
crates/aura_runtime/tests/: fail_closed.rs
docs/archive/plans/: plan_2026-07-22_2036_document-framer-rag.md  plan_2026-07-23_0618_self-contained-sentinel-runtime.md  plan_2026-07-23_0629_launcher-startup-fade.md  plan_2026-07-23_0645_launcher-text-render-fix.md  plan_2026-07-23_0700_brand-assets-launcher-icon.md  plan_2026-07-23_0752_document-intake-ui.md  plan_2026-07-23_0933_document-mmr-accumulator.md
docs/plans/: AURA_MASTER_PLAN.md
docs/security/: SENTINEL_ADOPTION_STATUS.md  SENTINEL_CERTIFICATION_REPORT.md  SENTINEL_IMPERVIOUS_PROTOCOL_MASTER_PLAN.md  SENTINEL_PROTECTED_ACTIONS.md
research/: CANON_COPY_LOG.txt  README.md
research/canon/00_indexes/: AURA_DOCS_ARMY_CONSOLIDATION.md  AURA_DOCS_CANON_SIGNAL.csv  AURA_DOCS_MAGNUM_OPUS_CATALOG.md  AURA_DOCS_MAGNUM_OPUS_README.md  AURA_DOCS_MAGNUM_OPUS_SUMMARY_BY_ROOT.txt  AURA_DOCS_VISION_CORE.csv  AURA_DOCS_VISION_CORE.md
research/canon/01_sentinel/: ARCHITECTURE.md  AURA.md  FOREVER_LAW.md  Integration of Sentinel-Core Logic into AURA-Sentinel.md  README.md  SENTINEL_ADOPTION_STATUS.template.md  SENTINEL_CANON.md  SENTINEL_CERTIFICATION_REPORT.template.md  SENTINEL_CHECKLIST.md  SENTINEL_PROTECTED_ACTIONS.template.md  Sentinel-Core-Integration-Plan.md  THREAT_MODEL.md  actualsentinelplan.md
research/canon/02_charter_codex/: AI Organism Charter Design.md  ARCHETYPAL_ENGINEERING_DOCTRINE.md  AURA AI Genesis Protocol.md  AURA laws -.md  Aura Key - Genesis Blueprint v2.md  NeuroCognica Corporate Architecture Blueprint_.txt  NeuroCognica Foundational Charter.md  NeuroCognica-Volume-I-Corporate-Charter.md  NeuroCognica-Volume-II-Organizational-Architecture.md  NeuroCognica-Volume-III-Strategic-Doctrine.md  NeuroCognica-Volume-IV-Regulatory-Framework.md  NeuroCognica_ AURA OS Deep Analysis.txt  NeuroCognica_Complete_Codex.md  NeuroCognica_Foundational_Manifesto.md  THE_CHARTER_OF_COGNITIVE_SOVEREIGNTY.md
research/canon/03_egd_forever_law/: FOREVER_LAW.md  vol_2_forever_law_and_codex.md  vol_9_oracle_sentinel_protocol.md
research/canon/04_foundational_laws/: AI_BILL_OF_RIGHTS.md  (+1 more)
scripts/: install_launcher_shortcut.ps1
(+10 files in other folders)
