[package]
name = "aura_documents"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AURA NeuroCognica document framing and local RAG store foundation"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
