[package]
name = "aura_launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AURA Bevy Windows launcher"

[dependencies]
aura_documents = { path = "../aura_documents" }
aura_runtime = { path = "../aura_runtime" }
bevy = { version = "0.18.1" }
blake3 = { workspace = true }
chrono = { workspace = true }
rfd = "0.15"
serde_json = { workspace = true }

[build-dependencies]
winres = "0.1"
