[package]
name = "aura_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Aura L0 runtime: boot supervisor, Sentinel client, action broker"

[dependencies]
blake3 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
